[gd_scene load_steps=6 format=3 uid="uid://cpuklld65wd3k"]

[ext_resource type="Script" path="res://Scripts/StartStory.gd" id="1_48xte"]
[ext_resource type="Texture2D" uid="uid://cskkoj2jlqiel" path="res://Assets/Story/story_image.jpg" id="2_f14km"]
[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="2_gbhxn"]
[ext_resource type="AudioStream" uid="uid://btpvbw72lccim" path="res://Music/the-call-of-the-wild-128-ytshorts.savetube.me.mp3" id="3_ldy6x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_e7c7i"]

[node name="StartStory" type="Panel"]
script = ExtResource("1_48xte")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1203.0
texture = ExtResource("2_f14km")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e7c7i")

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(959.79, 532.573)
rotation = 3.14159
scale = Vector2(1918.58, -1066.15)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -716.0
offset_top = 182.0
offset_right = 727.0
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true

[node name="StartGameButton" type="Button" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 657.0
offset_top = 404.0
offset_right = 910.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Skip"
icon_alignment = 1
script = ExtResource("2_gbhxn")

[node name="NextStoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1352.0
offset_top = 941.0
offset_right = 1592.0
offset_bottom = 1052.0
theme_override_font_sizes/font_size = 32
text = "Next"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ldy6x")

[connection signal="pressed" from="StartGameButton" to="StartGameButton" method="_on_StartGame_pressed"]
[connection signal="pressed" from="NextStoryButton" to="." method="_on_next_story_button_pressed"]
