[gd_scene load_steps=4 format=3 uid="uid://650opffl6g5r"]

[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="1_8v2ok"]

[sub_resource type="LabelSettings" id="LabelSettings_88wb5"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_ag28y"]
font_size = 32

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 1920.0
offset_bottom = 400.0
text = "HEX Conquer"
label_settings = SubResource("LabelSettings_88wb5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 500.0
offset_right = 1160.0
offset_bottom = 600.0
pivot_offset = Vector2(83, 346)
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("1_8v2ok")

[node name="ModeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 640.0
offset_right = 1160.0
offset_bottom = 740.0
theme_override_font_sizes/font_size = 32
text = "Territory Control"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 780.0
offset_right = 1160.0
offset_bottom = 880.0
theme_override_font_sizes/font_size = 32
text = "How To Play"
script = ExtResource("1_8v2ok")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 980.0
offset_right = 1870.0
offset_bottom = 1080.0
text = "version 1.0.0"
label_settings = SubResource("LabelSettings_ag28y")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_pressed"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_StartButton_pressed"]
[connection signal="pressed" from="HelpButton" to="HelpButton" method="_on_HelpButton_pressed"]
